# sandbox

./: .gitignore  .gitmodules  README.md
Avishkar/: PDPA_clingo_ASP.lp  PDPA_clingo_python_1.py  PDPA_clingo_safety_prop.lp  PDPA_full_system.lp  PDPA_full_system_modifiers.lp  PDPA_l4_output.lp  PDPA_static_abducibles.lp  Readme.md  abduction.pl  core_PDPA_clingo.lp  encoding_for_despite.lp  executable_contract_further_extension.lp  executable_contract_pdpa.lp  expert_sys_prop_full.lp  expert_sys_prop_pt1.lp  ext_vbl_with_ineq_q_gen.lp  generating_abducibles_PDPA_static.lp  generating_justification_graph_unground.lp  generating_justification_graphs.lp  generating_justification_hypothetical.lp  git test.rtf  github_help_sheet.txt  must_sing.lp  sCASP_issues.pl  sCASP_issues_2.pl  subject_to_clingo.lp  type_check.flr
Avishkar/Expertsys/: PDPA_clingo_python_1.py  PDPA_python_neg_just.py  asp_fixed_code.lp  core_PDPA_clingo.lp  core_PDPA_neg_justification.lp  corp_tax_clingo_python.py  pure_q_gen_without_goal_pdpa.lp
aarne/: Analyse.hs  Interpretation.hs  Law.gf  LawEng.gf  LawParser.hs  LawRawEng.gf  Logics.hs  Makefile  README.md  Semantics.hs  Spreadsheet.hs  TestConcretes.hs  Top.cf  VisualizeLaw.hs  act-6A.html  act-6A.txt  annotated-6A.txt  color_spreadsheet.py  lines-6A.txt  pdpa.cabal  stack.yaml  tokenized-6A.txt
aarne/paper/: Makefile  complaw-bib.bib  law2logic.tex  v1-law2logic.tex
alfredang/: .gitignore
alfredang/DeonDigital_CSL/: firstContract.txt  payOnDelivery.csl  payOnDeliveryExtended.csl  payOrReturn.csl  takeaways.md
alfredang/GildedRose-DMNMD/: .gitignore  GildedRose.py  README.md  requirements.md  requirements.md~  requirements.txt  tests.py
alfredang/JSONparse/: JSONparse.cabal
alfredang/Readings/: Explaining Prolog Based Expert Systems using a Layered Meta-Interpreter.md
alfredang/SubcommandsPlease/: ChangeLog.md  package.yaml
alfredang/monadTransformersTalk_20May/: Script.docx  monadTransformers.pptx
alfredang/notExtension/: CHANGELOG.md  package.json
alfredang/not_a_pypack/: README.md
alfredang/reactjsonschema_test/: package.json
andreas/: gf-experiments
andreas/haskell-toys/: .gitignore  ChangeLog.md  LICENSE  README.md  haskell-toys.cabal  package.yaml  stack.yaml
bl4-antlr/: pom.xml
inari/: .gitignore  MiniAmbiguous.gf  MiniAmbiguousEng.gf  MiniAmbiguousEngAmb.gf
inari/drinks/: Drinks.gf  DrinksKiwi.gf  DrinksSinglish.gf  README.md
inari/german-tax/: GermanTax.cf  GermanTax.gf  GermanTaxGer.gf  README.md  Section2-annotated.txt  Section2-tokenised.txt  first-4-sentences-parsed.txt
inari/mti/: CHANGELOG.md  README.md  mti.cabal  package.yaml  viz.sh
inari/parse-predicates/: .gitignore  Parse.gf  ParseEng.gf  Setup.hs  corpus.gfs  hie.yaml  output.org  package.yaml  parse-predicates.cabal  stack.yaml
inari/rps/: .gitignore  README.md  RockPaperScissors.gf  RockPaperScissorsEng.gf  Setup.hs  demo.sh  hie.yaml  package.yaml  rps.cabal  stack.yaml
inari/scasp/: README.md  School.gf  School.json  School.pgf  SchoolEng.gf  SchoolLex.gf  SchoolLexEng.gf  corpus.txt  index.html  lex.py  package-lock.json  package.json  package.yaml  scasptest.cabal  school-corpus.txt  stack.yaml
inari/textual-l4/: Main.hs  Textual4.cf  cabal.project  textual4.cabal
inari/textual-l4/Textual/: Transform.hs
inari/ud/: ud_tests.py
jacobtan/: README.md  Semantics First Language Design.md  tictactoe  tictactoe-cycle-patternmatch  tictactoe-cycle-patternmatch.hs  tictactoe-patternmatch.hs  tictactoe.hs  visualise-any-all-v2.md  visualise-any-all.drawio  visualise-any-all.txt
jacobtan/DMN (decision model and notation)/: phase 3 heightened alert dine-in.md
jacobtan/Rule34-logic-gates/: README.md  Rule34-5.logicly  Rule34-6.logicly  Rule34-7.logicly  Rule34-9.logicly
jacobtan/baby-l4/: README.md  baby-l4.cabal  package.yaml  stack.yaml
jacobtan/eDSL-experiment/: ChangeLog.md  LICENSE  README.md  eDSL-experiment.cabal  package.yaml  stack.yaml
jacobtan/g2q-experiment/: .ghci  ChangeLog.md  README.md  g2q-experiment.cabal  package.yaml  stack.yaml
jacobtan/language-python-experiment/: ChangeLog.md  README.md  language-python-experiment.cabal  package.yaml
jacobtan/megaparsec-prototype-for-l4/: ChangeLog.md  README.md  package.yaml
jacobtan/prolog/: AocDay13.pl  collatz.pl  family.pl  list_without.pl  simple.pl  write.pl  write2.pl
jacobtan/sCASP/: RPS-sCASP.pl  RPS.pl  example-sCASP.pl  example-swipl.pl  swipl-RPS.pl
jacobtan/tictactoe-kata/: tictactoe-array.hs  tictactoe.hs
jacobtan/visualise-any-all/: visualise-any-all.drawio
joe/maude/: run.hy  (+11 more)
joe/maude/relational-pred/: main.maude  pyproject.toml  qna.maude  semantics.maude  syntax.maude  test.py
joe/maude/relational-pred/maude/: main.maude  meta.maude  qna.maude  semantics.maude  syntax.maude  test.maude
joeylim/: MarysIdeal.als  alloy-tutorial.md  pizza10.owl  robot.hs
liyana/: mon2.hs
martinstrecker/Playground/Parser/miniparser/: README.md  example.txt  miniparser.cabal  stack.yaml
martinstrecker/Playground/Parser/miniparser/src/: Coordinates.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs
martinstrecker/parserFunlang/: README.md  parserFunlang.cabal
martinstrecker/parserFunlang/src/: Eval.hs  Main.hs  Parser.y  Syntax.hs  Typing.hs
mengwong/: workplan.html  workplan.org
tws/: README.md  resources.md
(+1486 files in other folders)
