cabal-version:      2.4
name:               pdpa
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aarne Ranta
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable Analyse
    main-is:          Analyse.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , gf
    hs-source-dirs:   .
    default-language: Haskell2010


executable LawParser
    main-is:          LawParser.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Spreadsheet

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , gf
    hs-source-dirs:   .
    default-language: Haskell2010

executable VisualizeLaw
    main-is:          VisualizeLaw.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Spreadsheet
                      Law
                      Semantics

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , gf
    hs-source-dirs:   .
    default-language: Haskell2010