name:                parserFunlang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parserFunlang#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Strecker
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parserFunlang
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && <0.7
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
                     , transformers

  Build-depends:       base, array
  build-tools:         alex, happy
  other-modules:       
    Eval,
    Lexer,
    Parser,
    Syntax,
    Typing
                       