name:                miniparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/miniparser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:
                  -- generated
                  Lexer
                  Parser
                  Coordinates
                  Syntax
                  Typing
  hs-source-dirs:
     src
  build-depends:       base >= 4.7 && < 5
                     , array
                     , pretty-simple
                     , split
                     , text
                     -- required for lexer and parser
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
  default-language: Haskell2010
                       
                     
executable miniparser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
  build-tools:         alex, happy
  other-modules:
                Lexer,
                Parser,
                Coordinates,
                Syntax,
                Typing
                
